# AICHEMY_VISUALISER

./: Cargo.toml  README.md  alchemy_plots.html  example_exp.json  example_experiment.py  pyproject.toml  test.html  test.py  test2.py  test_alchemy.py
alchemy_new/: pyvenv.cfg
bokeh/: bokeh_serve.py  fix.py
database/: alchemy_data.db  database.py
scripts.py/: run_soup.py
src/: RUST_APP.code-workspace  analysis.rs  config.rs  lib.rs  soup.rs
