[package]
name = "alchemy"
version = "0.1.0"
edition = "2021"

[lib]
name = "alchemy"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "alchemy"
python-source = "python"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py37"] }
async-std = "1.12.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
lambda_calculus = { git = "https://github.com/agentelement/lambda_calculus", branch = "size-feat" }
plotters = "0.3.6"
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.39.2"

[build-dependencies]
pyo3-build-config = "0.22"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.profiling]
inherits = "release"
debug = true